primer esbozo bootstrap a tailwind plantilla

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    @apply font-montserrat;
+}
+
+header {
+    @apply bg-orange-500;
+}
+footer {
+    @apply text-white;
+ 
+}
+footer a {
+    @apply hover:text-orange-500;
+}
