--- a/resources/css/perfil_Personal.css
+++ b/resources/css/perfil_Personal.css
@@ -26,7 +26,7 @@
   }
 
  
-.slide {
+.boton1{
   background-color: rgb(247, 192, 115);
   color: rgb(0, 0, 0);
   border: 2px solid rgb(0, 0, 0);
@@ -37,7 +37,7 @@
   margin-left: 10px;
   }
   
-.slide:hover {
+.boton1:hover {
   background-color: white;
   color: rgb(0, 0, 0);
   cursor: pointer;
